Refactoring code to dependency injection

--- a/FizzBuzz/FizzBuzz.csproj
+++ b/FizzBuzz/FizzBuzz.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Infra\Infra.csproj" />
     <ProjectReference Include="..\TwistedFizzBuzz\TwistedFizzBuzzLibrary.csproj" />
   </ItemGroup>
 
