--- a/Infra/FizzBuzz.Infra.csproj
+++ b/Infra/FizzBuzz.Infra.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TwistedFizzBuzz\TwistedFizzBuzzLibrary.csproj" />
+    <ProjectReference Include="..\TwistedFizzBuzz\FizzBuzz.TwistedFizzBuzzLibrary.csproj" />
   </ItemGroup>
 
 </Project>
